--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,13 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.project.personal_health_monitor.view.ui.home.HomeFragment"
+        android:name="com.project.personal_health_monitor.view.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.project.personal_health_monitor.view.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.project.personal_health_monitor.view.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_graphs"
+        android:name="com.project.personal_health_monitor.view.graphs.GraphsFragment"
+        android:label="@string/menu_graphs"
+        tools:layout="@layout/fragment_graphs" />
 </navigation>
