--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.home.HomeFragment">
+    tools:context=".view.home.HomeFragment">
 
     <CalendarView
         android:id="@+id/calendar_view"
