--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="@dimen/activity_margin"
     tools:context=".view.home.HomeFragment">
 
     <CalendarView
-        android:id="@+id/calendar_view"
-        android:layout_width="wrap_content"
+        android:id="@+id/reports_calendar_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,58 +18,89 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="16dp"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginVertical="@dimen/activity_vertical_margin"
+        android:padding="@dimen/activity_margin"
+        app:layout_constraintBottom_toTopOf="@+id/create_new_report_floating_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendar_view" >
+        app:layout_constraintTop_toBottomOf="@+id/reports_calendar_view">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/summary_report_date_text"
+                android:id="@+id/report_local_date_text_view_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:hint="@string/report_date"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/body_pressure_text"
+                android:id="@+id/report_local_date_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/glycemic_index_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/body_temperature_text" />
+                app:layout_constraintBottom_toBottomOf="@+id/report_local_date_text_view_label"
+                app:layout_constraintStart_toStartOf="@+id/report_count_text_view"
+                app:layout_constraintTop_toTopOf="@+id/report_local_date_text_view_label" />
 
             <TextView
-                android:id="@+id/body_temperature_text"
+                android:id="@+id/report_count_text_view_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/body_pressure_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/summary_report_date_text" />
+                android:layout_marginTop="24dp"
+                android:hint="@string/report_count"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/report_local_date_text_view_label"
+                app:layout_constraintTop_toBottomOf="@+id/report_local_date_text_view_label" />
 
             <TextView
-                android:id="@+id/glycemic_index_text"
+                android:id="@+id/report_count_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/body_pressure_text" />
+                android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/report_count_text_view_label"
+                app:layout_constraintStart_toEndOf="@+id/report_count_text_view_label"
+                app:layout_constraintTop_toTopOf="@+id/report_count_text_view_label" />
+
+            <TextView
+                android:id="@+id/report_health_parameters_text_view_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:hint="@string/report_health_parameters_summary"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/report_count_text_view_label"
+                app:layout_constraintTop_toBottomOf="@+id/report_count_text_view_label" />
+
+            <TextView
+                android:id="@+id/report_health_parameters_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@+id/report_count_text_view_label"
+                app:layout_constraintTop_toBottomOf="@+id/report_health_parameters_text_view_label" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/create_new_report_floating_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_menu_add"
+        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
