--- a/app/src/main/res/layout/health_parameter_list_item.xml
+++ b/app/src/main/res/layout/health_parameter_list_item.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <Spinner
-        android:id="@+id/health_parameter_spinner"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/delete_health_parameter_button"
-        app:layout_constraintHorizontal_bias="0.5"
+    <TextView
+        android:id="@+id/health_parameter_name_spinner_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/health_parameter"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Spinner
+        android:id="@+id/health_parameter_name_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/health_parameter_name_spinner_label"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
-        android:id="@+id/health_parameter_value_text"
-        android:layout_width="match_parent"
+        android:id="@+id/health_parameter_value_edit_text"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:autofillHints="@string/health_parameter_value_hint"
+        android:hint="@string/health_parameter_value"
+        android:importantForAutofill="no"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/health_parameter_spinner" />
-
-    <ImageButton
-        android:id="@+id/delete_health_parameter_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/health_parameter_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/health_parameter_spinner"
-        app:layout_constraintTop_toTopOf="@+id/health_parameter_spinner"
-        app:layout_constraintVertical_bias="0.333"
-        app:srcCompat="@drawable/cancel_medium_ff" />
+        app:layout_constraintTop_toBottomOf="@+id/health_parameter_name_spinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
