--- a/app/src/main/res/layout/report_list_item.xml
+++ b/app/src/main/res/layout/report_list_item.xml
@@ -2,36 +2,42 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/activity_margin">
 
-    <TextView
-        android:id="@+id/report_notes_text_view_label"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/report_notes_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/notes"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/report_notes_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/report_notes_text_view_label"
-        app:layout_constraintStart_toEndOf="@+id/report_notes_text_view_label"
-        app:layout_constraintTop_toTopOf="@+id/report_notes_text_view_label" />
+        <TextView
+            android:id="@+id/report_notes_text_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/notes"
+            android:textSize="16sp"
+
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/report_notes_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="4dp"
+            android:layout_marginStart="16dp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/report_health_parameters_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:paddingTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/report_notes_text_view" />
+        app:layout_constraintTop_toBottomOf="@+id/report_notes_container" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
