--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -79,11 +79,11 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/report_postpone_by_edit_text"
+            <Spinner
+                android:id="@+id/report_postpone_by_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
+                android:layout_marginStart="@dimen/activity_horizontal_margin" />
 
         </LinearLayout>
 
